# opencv-4.3.0-examples

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/img_binaryzation/: CMakeLists.txt  img_binaryzation  img_binaryzation.cpp
examples/img_face/: CMakeLists.txt  img_face  img_face.cpp
examples/img_gradient/: CMakeLists.txt  img_gradient  img_gradient.cpp
examples/img_histogram/: CMakeLists.txt  img_histogram  img_histogram.cpp
examples/img_hog/: CMakeLists.txt  img_hog  img_hog.cpp
examples/img_resize/: CMakeLists.txt  img_resize  img_resize.cpp
examples/img_show/: CMakeLists.txt  img_show  img_show.cpp
lib/: libopencv_calib3d.so.4.4.0  libopencv_features2d.so.4.4.0  libopencv_flann.so.4.4.0  libopencv_gapi.so.4.4.0  libopencv_highgui.so.4.4.0  libopencv_imgcodecs.so.4.4.0  libopencv_ml.so.4.4.0  libopencv_objdetect.so.4.4.0  libopencv_photo.so.4.4.0  libopencv_stitching.so.4.4.0  libopencv_video.so.4.4.0  libopencv_videoio.so.4.4.0
lib/cmake/opencv4/: OpenCVConfig.cmake
